authentication-api/compile_errors.txt

> Task :compileJava FAILED
/home/pierre/github/M1-UBO-Spring-Boot-Testing-App/M1-UBO-Spring-Boot-Testing-App/src/main/java/com/config/MongoDataInitializer.java:22: error: no suitable constructor found for Poster(<null>,String,String,long,String,double,double,double)
            posterDao.save(new Poster(null, "Inception",
                           ^
    constructor Poster.Poster() is not applicable
      (actual and formal argument lists differ in length)
    constructor Poster.Poster(String,String,String,Integer,List<String>,String,List<String>,Double,Double,Double,String,Long,String) is not applicable
      (actual and formal argument lists differ in length)
/home/pierre/github/M1-UBO-Spring-Boot-Testing-App/M1-UBO-Spring-Boot-Testing-App/src/main/java/com/config/MongoDataInitializer.java:26: error: no suitable constructor found for Poster(<null>,String,String,long,String,double,double,double)
            posterDao.save(new Poster(null, "The Dark Knight",
                           ^
    constructor Poster.Poster() is not applicable
      (actual and formal argument lists differ in length)
    constructor Poster.Poster(String,String,String,Integer,List<String>,String,List<String>,Double,Double,Double,String,Long,String) is not applicable
      (actual and formal argument lists differ in length)
/home/pierre/github/M1-UBO-Spring-Boot-Testing-App/M1-UBO-Spring-Boot-Testing-App/src/main/java/com/config/MongoDataInitializer.java:30: error: no suitable constructor found for Poster(<null>,String,String,long,String,double,double,double)
            posterDao.save(new Poster(null, "Interstellar",
                           ^
    constructor Poster.Poster() is not applicable
      (actual and formal argument lists differ in length)
    constructor Poster.Poster(String,String,String,Integer,List<String>,String,List<String>,Double,Double,Double,String,Long,String) is not applicable
      (actual and formal argument lists differ in length)
/home/pierre/github/M1-UBO-Spring-Boot-Testing-App/M1-UBO-Spring-Boot-Testing-App/src/main/java/com/config/MongoDataInitializer.java:34: error: no suitable constructor found for Poster(<null>,String,String,long,String,double,double,double)
            posterDao.save(new Poster(null, "Pulp Fiction",
                           ^
    constructor Poster.Poster() is not applicable
      (actual and formal argument lists differ in length)
    constructor Poster.Poster(String,String,String,Integer,List<String>,String,List<String>,Double,Double,Double,String,Long,String) is not applicable
      (actual and formal argument lists differ in length)
/home/pierre/github/M1-UBO-Spring-Boot-Testing-App/M1-UBO-Spring-Boot-Testing-App/src/main/java/com/config/MongoDataInitializer.java:38: error: no suitable constructor found for Poster(<null>,String,String,long,String,double,double,double)
            posterDao.save(new Poster(null, "The Matrix",
                           ^
    constructor Poster.Poster() is not applicable
      (actual and formal argument lists differ in length)
    constructor Poster.Poster(String,String,String,Integer,List<String>,String,List<String>,Double,Double,Double,String,Long,String) is not applicable
      (actual and formal argument lists differ in length)
/home/pierre/github/M1-UBO-Spring-Boot-Testing-App/M1-UBO-Spring-Boot-Testing-App/src/main/java/com/config/SecurityConfig.java:81: error: cannot find symbol
        return pseudo -> userDao.findByPseudo(pseudo)
                                ^
  symbol:   method findByPseudo(String)
  location: variable userDao of type UserDao
/home/pierre/github/M1-UBO-Spring-Boot-Testing-App/M1-UBO-Spring-Boot-Testing-App/src/main/java/com/servlet/PosterServlet.java:94: error: cannot find symbol
        if (input.getTitle() == null || input.getTitle().isBlank()) {
                 ^
  symbol:   method getTitle()
  location: variable input of type PosterInputDto
/home/pierre/github/M1-UBO-Spring-Boot-Testing-App/M1-UBO-Spring-Boot-Testing-App/src/main/java/com/servlet/PosterServlet.java:94: error: cannot find symbol
        if (input.getTitle() == null || input.getTitle().isBlank()) {
                                             ^
  symbol:   method getTitle()
  location: variable input of type PosterInputDto
8 errors

[Incubating] Problems report is available at: file:///home/pierre/github/M1-UBO-Spring-Boot-Testing-App/M1-UBO-Spring-Boot-Testing-App/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  /home/pierre/github/M1-UBO-Spring-Boot-Testing-App/M1-UBO-Spring-Boot-Testing-App/src/main/java/com/config/MongoDataInitializer.java:22: error: no suitable constructor found for Poster(<null>,String,String,long,String,double,double,double)
              posterDao.save(new Poster(null, "Inception",
                             ^
      constructor Poster.Poster() is not applicable
        (actual and formal argument lists differ in length)
      constructor Poster.Poster(String,String,String,Integer,List<String>,String,List<String>,Double,Double,Double,String,Long,String) is not applicable
        (actual and formal argument lists differ in length)
  /home/pierre/github/M1-UBO-Spring-Boot-Testing-App/M1-UBO-Spring-Boot-Testing-App/src/main/java/com/config/MongoDataInitializer.java:26: error: no suitable constructor found for Poster(<null>,String,String,long,String,double,double,double)
              posterDao.save(new Poster(null, "The Dark Knight",
                             ^
      constructor Poster.Poster() is not applicable
        (actual and formal argument lists differ in length)
      constructor Poster.Poster(String,String,String,Integer,List<String>,String,List<String>,Double,Double,Double,String,Long,String) is not applicable
        (actual and formal argument lists differ in length)
  /home/pierre/github/M1-UBO-Spring-Boot-Testing-App/M1-UBO-Spring-Boot-Testing-App/src/main/java/com/config/MongoDataInitializer.java:30: error: no suitable constructor found for Poster(<null>,String,String,long,String,double,double,double)
              posterDao.save(new Poster(null, "Interstellar",
                             ^
      constructor Poster.Poster() is not applicable
        (actual and formal argument lists differ in length)
      constructor Poster.Poster(String,String,String,Integer,List<String>,String,List<String>,Double,Double,Double,String,Long,String) is not applicable
        (actual and formal argument lists differ in length)
  /home/pierre/github/M1-UBO-Spring-Boot-Testing-App/M1-UBO-Spring-Boot-Testing-App/src/main/java/com/config/MongoDataInitializer.java:34: error: no suitable constructor found for Poster(<null>,String,String,long,String,double,double,double)
              posterDao.save(new Poster(null, "Pulp Fiction",
                             ^
      constructor Poster.Poster() is not applicable
        (actual and formal argument lists differ in length)
      constructor Poster.Poster(String,String,String,Integer,List<String>,String,List<String>,Double,Double,Double,String,Long,String) is not applicable
        (actual and formal argument lists differ in length)
  /home/pierre/github/M1-UBO-Spring-Boot-Testing-App/M1-UBO-Spring-Boot-Testing-App/src/main/java/com/config/MongoDataInitializer.java:38: error: no suitable constructor found for Poster(<null>,String,String,long,String,double,double,double)
              posterDao.save(new Poster(null, "The Matrix",
                             ^
      constructor Poster.Poster() is not applicable
        (actual and formal argument lists differ in length)
      constructor Poster.Poster(String,String,String,Integer,List<String>,String,List<String>,Double,Double,Double,String,Long,String) is not applicable
        (actual and formal argument lists differ in length)
  /home/pierre/github/M1-UBO-Spring-Boot-Testing-App/M1-UBO-Spring-Boot-Testing-App/src/main/java/com/config/SecurityConfig.java:81: error: cannot find symbol
          return pseudo -> userDao.findByPseudo(pseudo)
                                  ^
    symbol:   method findByPseudo(String)
    location: variable userDao of type UserDao
  /home/pierre/github/M1-UBO-Spring-Boot-Testing-App/M1-UBO-Spring-Boot-Testing-App/src/main/java/com/servlet/PosterServlet.java:94: error: cannot find symbol
          if (input.getTitle() == null || input.getTitle().isBlank()) {
                   ^
    symbol:   method getTitle()
    location: variable input of type PosterInputDto
  /home/pierre/github/M1-UBO-Spring-Boot-Testing-App/M1-UBO-Spring-Boot-Testing-App/src/main/java/com/servlet/PosterServlet.java:94: error: cannot find symbol
          if (input.getTitle() == null || input.getTitle().isBlank()) {
                                               ^
    symbol:   method getTitle()
    location: variable input of type PosterInputDto
  8 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.12.1/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 2s
1 actionable task: 1 executed
